fix: increased contrast for better accessibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #footer {
   background-color: #444;
-  color: #aaa;
+  color: #FFF;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
@@ -105,7 +105,7 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  background-color: #3397DB;
+  background-color: #0D3DDE;
   align-items: center;
   padding: 10px;
   display: flex;
